Update header, add logo and website name

--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
     <body>
         <div class="top-container">
             <div class="header">
-                <div class="header-logo">Header Logo</div>
+                <div class="header-logo">
+                    <img src="./images/clipart384691.png">
+                    Fluffy Goobers
+                </div>
                 <ul class="header-links">
-                    <li><a href="">header link one</a></li>
-                    <li><a href="">header link two</a></li>
-                    <li><a href="">header link three</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Merch</a></li>
+                    <li><a href="">Events</a></li>
                 </ul>
             </div>
             <div class="intro">
                 <div class="intro-text">
                     <div class="main-text">Sammies do not descend from wolves...</div>
-                    <div class="text">They are sweet aloof goofy goobers easily mistaken for fluffy clouds 
+                    <p class="text">They are sweet aloof goofy goobers easily mistaken for fluffy clouds 
                         (<i>but if you really wanna know, they are wild dogs).</i>
                         They pretend to be deaf and act as if you don't exist whenever they see another
                         goober a million miles away but we love them nonetheless.  
-                    </div>
+                    </p>
                     <img class="flower" src="./images/daisies.png">
                     <button>Sign up</button>
                     
