Change image sizes and add text content

--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>My Landing Page</title>
+        <title>Fluffy Goobers</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="./images/clipart384691.png">
     </head>
     <body>
         <div class="top-container">
             <div class="header">
                 <div class="header-logo">
-                    <img src="./images/clipart384691.png">
+                    <img src="./images/paw.png">
                     Fluffy Goobers
                 </div>
                 <ul class="header-links">
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Merch</a></li>
-                    <li><a href="">Events</a></li>
+                    <li><a href="index.html">About Us</a></li>
+                    <li><a href="index.html">Merch</a></li>
+                    <li><a href="index.html">Events</a></li>
                 </ul>
             </div>
             <div class="intro">
@@ -23,34 +24,39 @@
                     <div class="main-text">Sammies do not descend from wolves...</div>
                     <p class="text">They are sweet aloof goofy goobers easily mistaken for fluffy clouds 
                         (<i>but if you really wanna know, they are wild dogs).</i>
-                        They pretend to be deaf and act as if you don't exist whenever they see another
-                        goober a million miles away but we love them nonetheless.  
-                    </p>
+                        They have selective hearing and act as if you don't exist whenever they see another
+                        goober a million miles away but we love them nonethesless.  
+                        <br>Fluffy Goobers is a social/dog-sitting group where Samoyed owners can 
+                        bring their fluffy cloud for a social afternoon surrounded by other fluffy clouds.
+                        </p>
+                    <p class="text">Unable to find someone to watch your goober during the day? No problem! 
+                        Register your goober by clicking on the <i>Sign Up</i> button below and drop them off 
+                        at our headquarters at your chosen time. They'll be pampered so much while you're away
+                        you will need to drag them home. </p>
+                    <button>Sign Up</button>
                     <img class="flower" src="./images/daisies.png">
-                    <button>Sign up</button>
-                    
                 </div>
-                <img class="sammie", src="./images/34916e2f7ee66b9653522f2543b1eb10.jpg">
+                <img class="sammie", src="./images/cartoon-girl-samoyed.jpg">
             </div>
         </div>
         <div class="images-container">
-            <div class="information-header">Some very fluffy goobers</div>
+            <div class="information-header">Meet the fluffy staff</div>
             <div class="images-with-text">
                 <div class="image-with-text">
-                    <img src="https://media.tenor.com/Eo-EZ0G_-qoAAAAM/samoyed-dog.gif">
-                    <div class="text">this is some subtext under an illustration or image</div>
+                    <img src="./images/sam4.jpeg">
+                    <div class="text">Meet Maia, our accountant! Maia loves seedless watermelon and long walks in the mud.</div>
                 </div>
                 <div class="image-with-text">
                     <img src="./images/sam1.jpeg">
-                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">Meet Yuna, our COO! She graduated Cum Laude from Pawvard University with a degree in fluffenomics.</div>
                 </div>
                 <div class="image-with-text">
                     <img src="./images/sam2.jpeg">
-                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">Meet Wasabi, our lead dogsitter! He makes sure all doggo's feel safe and happy.</div>
                 </div>
                 <div class="image-with-text">
                     <img src="./images/sam3.jpeg">
-                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">Meet Riceball and Sakura, our IT department! They help keep this website updated and looking fresh. </div>
                 </div>
             </div>
         </div>
@@ -59,7 +65,7 @@
                 staying up all night vomiting and completely stressing out my lovely owner!
                 <span class="quote-author">-Shera the Samoyed</span>
             </div>
-            <img class="undertale-sam" src="./images/6ivfrfgpkdn41.png">
+            <img class="undertale-sam" src="./images/undertale-samoyed.png">
         </div>
         <div class="sign-up-container">
             <div class="textbox">
