Improve code by using appropriate element types

--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
         <meta charset="utf-8">
         <title>Fluffy Goobers</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="./images/clipart384691.png">
+        <link rel="shortcut icon" href="./images/paw.png">
     </head>
     <body>
-        <div class="top-container">
-            <div class="header">
+        <div class="welcome-container">
+            <header>
                 <div class="header-logo">
                     <img src="./images/paw.png">
                     Fluffy Goobers
                 </div>
                 <ul class="header-links">
                     <li><a href="index.html">About Us</a></li>
-                    <li><a href="index.html">Merch</a></li>
+                    <li><a href="index.html">Donate</a></li>
                     <li><a href="index.html">Events</a></li>
                 </ul>
-            </div>
-            <div class="intro">
-                <div class="intro-text">
-                    <div class="main-text">Sammies do not descend from wolves...</div>
+            </header>
+            <div class="info-container">
+                <div class="welcome-text">
+                    <h1>Sammies do not descend from wolves...</h1>
                     <p class="text">They are sweet aloof goofy goobers easily mistaken for fluffy clouds 
                         (<i>but if you really wanna know, they are wild dogs).</i>
                         They have selective hearing and act as if you don't exist whenever they see another
-                        goober a million miles away but we love them nonethesless.  
+                        goober a million miles away but we love them nonetheless.  
                         <br>Fluffy Goobers is a social/dog-sitting group where Samoyed owners can 
                         bring their fluffy cloud for a social afternoon surrounded by other fluffy clouds.
                         </p>
@@ -36,49 +36,44 @@
                     <button>Sign Up</button>
                     <img class="flower" src="./images/daisies.png">
                 </div>
-                <img class="sammie", src="./images/cartoon-girl-samoyed.jpg">
+                <img class="welcome-photo", src="./images/cartoon-girl-samoyed.jpg">
             </div>
         </div>
-        <div class="images-container">
-            <div class="information-header">Meet the fluffy staff</div>
+        <div class="staff-container">
+            <h2>Meet the fluffy staff</h2>
             <div class="images-with-text">
                 <div class="image-with-text">
                     <img src="./images/sam4.jpeg">
-                    <div class="text">Meet Maia, our accountant! Maia loves seedless watermelon and long walks in the mud.</div>
+                    <div class="text"><b>Meet Maia, our accountant!</b> Maia loves seedless watermelon and long walks in the mud.</div>
                 </div>
                 <div class="image-with-text">
                     <img src="./images/sam1.jpeg">
-                    <div class="text">Meet Yuna, our COO! She graduated Cum Laude from Pawvard University with a degree in fluffenomics.</div>
+                    <div class="text"><b>Meet Yuna, our COO! </b> She graduated Cum Laude from Pawvard University with a degree in fluffenomics.</div>
                 </div>
                 <div class="image-with-text">
                     <img src="./images/sam2.jpeg">
-                    <div class="text">Meet Wasabi, our lead dogsitter! He makes sure all doggo's feel safe and happy.</div>
+                    <div class="text"><b>Meet Wasabi, our lead dogsitter!</b> He makes sure all doggo's feel safe and happy.</div>
                 </div>
                 <div class="image-with-text">
                     <img src="./images/sam3.jpeg">
-                    <div class="text">Meet Riceball and Sakura, our IT department! They help keep this website updated and looking fresh. </div>
+                    <div class="text"><b>Meet Riceball and Sakura, our IT department!</b> They help keep this website updated and looking fresh. </div>
                 </div>
             </div>
         </div>
         <div class="quote-container">
-            <div class="quote-text">Did you know that dirt and horse poop is absolutely delicious? It's worth 
-                staying up all night vomiting and completely stressing out my lovely owner!
-                <span class="quote-author">-Shera the Samoyed</span>
-            </div>
+            <p class="quote-text">Did you know that dirt and horse poop is absolutely delicious? It's worth 
+                staying up all night vomiting and completely stressing out my lovely owner!</p>
+            <p class="quote-author">-Shera Fluffybutt</p>
+        </div>
+        <div class="signup-container">
             <img class="undertale-sam" src="./images/undertale-samoyed.png">
-        </div>
-        <div class="sign-up-container">
-            <div class="textbox">
-                <div class="signup-text">
-                    <span style="font-size: 26px; font-weight: bold;">Call to action! It's time!</span>
-                    <br>Have you ever wondered what it would be like to run with an army of chunky-pawed clouds? 
-                    Sign up for this amazing event by clicking that button right over there!
-                </div>
-                <button>Sign up</button>
+            <div class="signup-text">
+                <p><span style="font-size: 26px; font-weight: bold;">Call to action! It's time!</span>
+                <br>Have you ever wondered what it would be like to run with an army of chunky-pawed clouds? 
+                Sign up for this amazing event by clicking that button right over there!</p>
             </div>
+            <button>Sign up</button>
         </div>
-        <div class="footer">
-            <span>Copyright © The Odin Project 2022</span>
-        </div>
+        <footer>Copyright © The Odin Project 2022</footer>
     </body>
 </html>
